fix(login): toggle-visibility password

--- a/frontend/assets/scss/components/_login-form.scss
+++ b/frontend/assets/scss/components/_login-form.scss
@@ -25,6 +25,9 @@
       font-size: 1rem;
       background-color: $color-surface-alt;
       color: $color-text-primary;
+      width: 100%;
+      box-sizing: border-box;
+      padding-right: 2.5rem;
 
       &::placeholder {
         color: rgba($color-text-primary, 0.7);
